--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/nikhil.jpg" alt="Nikhil profile picture"></td>
+      <td><img src="images/Nikhil.jpg" alt="Nikhil profile picture"></td>
       <td>
         <h1>Nikhil Dahiya</h1>
         <p><em><strong>Computer Science</strong> Graduate</em></p>
